--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
         <img id="tree_cone_mtl_02" src="tree_cone_imperial.png"> 
         <a-asset-item id="pine_tree_gltf" src="pine_tree.gltf"></a-asset-item>             
       </a-assets>
+
+<!--TEST-->
+
+<a-entity id="test">
+    <a-entity></a-entity>
+    <a-entity scale="7.412 0.397 9.152" id="ride" geometry="" position="0 -1 0" n-mesh-collider="type:environment">
+        <a-animation attribute="position" from="" to="-154.429 363.615 363.796" dur="20000" repeat="indefinite" delay="5000"></a-animation>
+
+    </a-entity>
+    <a-entity id="bottom" geometry=""></a-entity>
+    <a-entity position="-154.429 363.615 363.796" id="top" geometry=""></a-entity>
+    </a-entity>
+
+
+
+<!--END TEST-->
+
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-327.406 -3.17 3.948" scale="127.774 1.524 127.774" id="mountain" n-mesh-collider="type:environment"></a-entity>
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="-191.664 -3.864 -172.628" scale="310.553 1.524 127.774" id="mountain-2" n-mesh-collider="type:environment"></a-entity>
       <a-entity obj-model="mtl:stump.mtl;obj:stump.obj" position="114.301 -2.05 3.948" scale="127.774 1.524 127.774" id="mountain-3" n-mesh-collider="type:environment"></a-entity>
