--- a/world00/builder.html
+++ b/world00/builder.html
@@ -4,71 +4,74 @@
   </head>
   <body class="a-body ">
     <a-scene altspace="fullspace:true" class="fullscreen" inspector="" keyboard-shortcuts="" screenshot="" vr-mode-ui="">
+        <a-assets>
+            <img id="btn" src="btn1.png">
+        </a-assets>
         <a-entity id="color"> 
-            <a-box position="-23.427 1.303 -13.876" color="#DDCA7D"></a-box>
-            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#DDCA7D"></a-sphere>
-            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#DDCA7D"></a-cylinder>
-            <a-cone color="#DDCA7D" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875"></a-cone>
-            <a-dodecahedron color="#DDCA7D" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215"></a-dodecahedron>
-            <a-icosahedron color="#DDCA7D" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179"></a-icosahedron>
-            <a-octahedron color="#DDCA7D" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286"></a-octahedron>
-            <a-ring material="color:#DDCA7D;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339"></a-ring>
-            <a-tetrahedron color="#DDCA7D" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319"></a-tetrahedron>
-            <a-torus-knot color="#DDCA7D" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143"></a-torus-knot>
-            <a-torus color="#DDCA7D" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25"></a-torus>
-            <a-triangle material="color:#DDCA7D;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
+            <a-box position="-23.427 1.303 -13.876" color="#DDCA7D" material="src:#btn"></a-box>
+            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#DDCA7D" material="src:#btn"></a-sphere>
+            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#DDCA7D" material="src:#btn"></a-cylinder>
+            <a-cone color="#DDCA7D" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875" material="src:#btn"></a-cone>
+            <a-dodecahedron color="#DDCA7D" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
+            <a-icosahedron color="#DDCA7D" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179" material="src:#btn"></a-icosahedron>
+            <a-octahedron color="#DDCA7D" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
+            <a-ring material="color:#DDCA7D;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339" material="src:#btn"></a-ring>
+            <a-tetrahedron color="#DDCA7D" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+            <a-torus-knot color="#DDCA7D" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143" material="src:#btn"></a-torus-knot>
+            <a-torus color="#DDCA7D" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
+            <a-triangle material="color:#DDCA7D;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity><a-entity id="color-2" position="0 0 5.079"> 
-            <a-box position="-23.427 1.303 -13.876" color="#B88B4A"></a-box>
-            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#B88B4A"></a-sphere>
-            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#B88B4A"></a-cylinder>
-            <a-cone color="#B88B4A" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875"></a-cone>
-            <a-dodecahedron color="#B88B4A" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215"></a-dodecahedron>
-            <a-icosahedron color="#B88B4A" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179"></a-icosahedron>
-            <a-octahedron color="#B88B4A" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286"></a-octahedron>
-            <a-ring material="color:#B88B4A;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339"></a-ring>
-            <a-tetrahedron color="#B88B4A" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319"></a-tetrahedron>
-            <a-torus-knot color="#B88B4A" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143"></a-torus-knot>
-            <a-torus color="#B88B4A" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25"></a-torus>
-            <a-triangle material="color:#B88B4A;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
+            <a-box position="-23.427 1.303 -13.876" color="#B88B4A" material="src:#btn"></a-box>
+            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#B88B4A" material="src:#btn"></a-sphere>
+            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#B88B4A" material="src:#btn"></a-cylinder>
+            <a-cone color="#B88B4A" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875" material="src:#btn"></a-cone>
+            <a-dodecahedron color="#B88B4A" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
+            <a-icosahedron color="#B88B4A" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179 material="src:#btn""></a-icosahedron>
+            <a-octahedron color="#B88B4A" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
+            <a-ring material="color:#B88B4A;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339" material="src:#btn"></a-ring>
+            <a-tetrahedron color="#B88B4A" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+            <a-torus-knot color="#B88B4A" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143" material="src:#btn"></a-torus-knot>
+            <a-torus color="#B88B4A" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
+            <a-triangle material="color:#B88B4A;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity><a-entity id="color-3" position="0 0 10.879"> 
-            <a-box position="-23.427 1.303 -13.876" color="#A27035"></a-box>
-            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#A27035"></a-sphere>
-            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#A27035"></a-cylinder>
-            <a-cone color="#A27035" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875"></a-cone>
-            <a-dodecahedron color="#A27035" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215"></a-dodecahedron>
-            <a-icosahedron color="#A27035" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179"></a-icosahedron>
-            <a-octahedron color="#A27035" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286"></a-octahedron>
-            <a-ring material="color:#A27035;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339"></a-ring>
-            <a-tetrahedron color="#A27035" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319"></a-tetrahedron>
-            <a-torus-knot color="#A27035" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143"></a-torus-knot>
-            <a-torus color="#A27035" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25"></a-torus>
-            <a-triangle material="color:#A27035;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
+            <a-box position="-23.427 1.303 -13.876" color="#A27035" material="src:#btn"></a-box>
+            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#A27035" material="src:#btn"></a-sphere>
+            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#A27035" material="src:#btn"></a-cylinder>
+            <a-cone color="#A27035" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875" material="src:#btn"></a-cone>
+            <a-dodecahedron color="#A27035" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
+            <a-icosahedron color="#A27035" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179" material="src:#btn"></a-icosahedron>
+            <a-octahedron color="#A27035" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
+            <a-ring material="color:#A27035;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339" material="src:#btn"></a-ring>
+            <a-tetrahedron color="#A27035" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+            <a-torus-knot color="#A27035" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143" material="src:#btn"></a-torus-knot>
+            <a-torus color="#A27035" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
+            <a-triangle material="color:#A27035;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity><a-entity id="color-4" position="0 0 15.622"> 
-            <a-box position="-23.427 1.303 -13.876" color="#C57CEA"></a-box>
-            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#C57CEA"></a-sphere>
-            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#C57CEA"></a-cylinder>
-            <a-cone color="#C57CEA" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875"></a-cone>
-            <a-dodecahedron color="#C57CEA" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215"></a-dodecahedron>
-            <a-icosahedron color="#C57CEA" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179"></a-icosahedron>
-            <a-octahedron color="#C57CEA" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286"></a-octahedron>
-            <a-ring material="color:#C57CEA;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339"></a-ring>
-            <a-tetrahedron color="#C57CEA" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319"></a-tetrahedron>
-            <a-torus-knot color="#C57CEA" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143"></a-torus-knot>
-            <a-torus color="#C57CEA" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25"></a-torus>
-            <a-triangle material="color:#C57CEA;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
+            <a-box position="-23.427 1.303 -13.876" color="#C57CEA" material="src:#btn"></a-box>
+            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#C57CEA" material="src:#btn"></a-sphere>
+            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#C57CEA" material="src:#btn"></a-cylinder>
+            <a-cone color="#C57CEA" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875" material="src:#btn"></a-cone>
+            <a-dodecahedron color="#C57CEA" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
+            <a-icosahedron color="#C57CEA" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179" material="src:#btn"></a-icosahedron>
+            <a-octahedron color="#C57CEA" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
+            <a-ring material="color:#C57CEA;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339" material="src:#btn"></a-ring>
+            <a-tetrahedron color="#C57CEA" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+            <a-torus-knot color="#C57CEA" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143" material="src:#btn"></a-torus-knot>
+            <a-torus color="#C57CEA" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
+            <a-triangle material="color:#C57CEA;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity><a-entity id="color-5" position="0 0 21.531"> 
-            <a-box position="-23.427 1.303 -13.876" color="#533E2D"></a-box>
-            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#533E2D"></a-sphere>
-            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#533E2D"></a-cylinder>
-            <a-cone color="#533E2D" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875"></a-cone>
-            <a-dodecahedron color="#533E2D" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215"></a-dodecahedron>
-            <a-icosahedron color="#533E2D" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179"></a-icosahedron>
-            <a-octahedron color="#533E2D" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286"></a-octahedron>
-            <a-ring material="color:#533E2D;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339"></a-ring>
-            <a-tetrahedron color="#533E2D" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319"></a-tetrahedron>
+            <a-box position="-23.427 1.303 -13.876" color="#533E2D" material="src:#btn"></a-box>
+            <a-sphere position="-19.564 1.25 -13.528" radius="1.25" color="#533E2D" material="src:#btn"></a-sphere>
+            <a-cylinder position="-16.517 0.75 -13.881" radius="0.5" height="1.5" color="#533E2D" material="src:#btn"></a-cylinder>
+            <a-cone color="#533E2D" radius-bottom="1" radius-top="0" position="-12.662 1.206 -13.875" material="src:#btn"></a-cone>
+            <a-dodecahedron color="#533E2D" radius="5" position="-8.347 1.283 -14.339" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
+            <a-icosahedron color="#533E2D" radius="5" position="-4.585 1.547 -14.513" scale="0.179 0.179 0.179" material="src:#btn"></a-icosahedron>
+            <a-octahedron color="#533E2D" radius="5" position="-1.449 1.485 -14.571" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
+            <a-ring material="color:#533E2D;side:double;" radius-inner="1" radius-outer="2" position="3.415 2.548 -14.339" material="src:#btn"></a-ring>
+            <a-tetrahedron color="#533E2D" radius="5" position="8.009 2.72 -14.719" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
             <a-torus-knot color="#533E2D" arc="180" p="2" q="7" radius="5" radius-tubular="1" position="11.128 2.169 -14.916" scale="0.143 0.143 0.143"></a-torus-knot>
-            <a-torus color="#533E2D" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25"></a-torus>
-            <a-triangle material="color:#533E2D;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
+            <a-torus color="#533E2D" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
+            <a-triangle material="color:#533E2D;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity>       
         <!--ground/sky-->
         <a-sky color="#C57CEA"></a-sky>
@@ -76,5 +79,10 @@
     </a-scene>
 <!--
  https://coolors.co/533e2d-a27035-b88b4a-ddca7d-c57cea
+ #533E2D - DARK LIVER (HORSES)
+ #A27035 - METALLIC SUNBURST
+ #B88B4A - Deer
+ #DDCA7D - BURLYWOOD
+ #C57CEA - Lavender
 -->
 </body></html>
