--- a/world00/builder.html
+++ b/world00/builder.html
@@ -74,7 +74,7 @@
             <a-triangle material="color:#533E2D;side:double;" vertex-c="1 -1 0" position="16.735 2.67 -13.413" material="src:#btn"></a-triangle>
      </a-entity>       
         <!--ground/sky-->
-        <a-sky color="#C57CEA"></a-sky>
+        <a-sky color="#C57CEA" radius="2500"></a-sky>
         <a-plane position="0 0 -4" rotation="-90 0 0" width="4000" height="4000" color="#533E2D"></a-plane>    
     </a-scene>
 <!--
