--- a/world00/index.html
+++ b/world00/index.html
@@ -24,18 +24,18 @@
                         <a-torus color="#DDCA7D" arc="360" radius="5" radius-tubular="1" position="14.3 2.099 -14.99" scale="0.25 0.25 0.25" material="src:#btn"></a-torus>
                         <a-triangle material="side:double;color:#DDCA7D" vertex-c="1 -1 0" position="16.735 2.67 -13.413"></a-triangle>
                  </a-entity>  
-                 <a-entity id="canyon" position="0 0 -517.451" scale="216.93 216.93 216.93">
-                        <a-dodecahedron color="#DDCA7D" radius="5" position="-5.009 1.037 -3.247" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
-                       <a-octahedron color="#DDCA7D" radius="5" position="-0.26 1.485 -2.08" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
-                        <a-tetrahedron color="#DDCA7D" radius="5" position="4.513 1.714 1.368" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+                 <a-entity id="canyon" position="0 0 1.96" scale="49.992 49.992 49.992">
+                        <a-dodecahedron color="#DDCA7D" radius="5" position="-5.009 1.037 -5.454" scale="0.215 1.24 0.215" material="src:#btn"></a-dodecahedron>
+                       <a-octahedron color="#DDCA7D" radius="5" position="-0.26 1.485 -5.591" scale="0.286 1.415 0.286" material="src:#btn" rotation="0 -89.83978227651309 0"></a-octahedron>
+                        <a-tetrahedron color="#DDCA7D" radius="5" position="-6.159 1.714 -5.078" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
                         <a-box position="1.831 1.303 -4.429" color="#DDCA7D" material="src:#btn"></a-box>
-                        <a-dodecahedron color="#DDCA7D" radius="5" position="-3.396 1.037 -3.247" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
-                        <a-octahedron color="#DDCA7D" radius="5" position="0.376 1.485 -2.08" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
-                         <a-tetrahedron color="#DDCA7D" radius="5" position="5.25 1.313 1.368" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+                        <a-dodecahedron color="#DDCA7D" radius="5" position="-3.396 1.037 -5.865" scale="0.215 1.474 0.215" material="src:#btn"></a-dodecahedron>
+                        <a-octahedron color="#DDCA7D" radius="5" position="4.048 1.485 -2.08" scale="0.286 1.398 0.097" material="src:#btn" rotation="0 -92.36079657508871 0"></a-octahedron>
+                         <a-tetrahedron color="#DDCA7D" radius="5" position="3.05 1.313 -4.559" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
                          <a-box position="-0.429 1.303 -4.429" color="#DDCA7D" material="src:#btn"></a-box>
-                         <a-dodecahedron color="#DDCA7D" radius="5" position="-6.568 1.037 -3.247" scale="0.215 0.215 0.215" material="src:#btn"></a-dodecahedron>
-                         <a-octahedron color="#DDCA7D" radius="5" position="-1.449 1.485 -2.08" scale="0.286 0.286 0.286" material="src:#btn"></a-octahedron>
-                          <a-tetrahedron color="#DDCA7D" radius="5" position="3.241 1.714 1.368" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
+                         <a-dodecahedron color="#DDCA7D" radius="5" position="1.672 1.037 -5.33" scale="0.215 2.05 0.215" material="src:#btn"></a-dodecahedron>
+                         <a-octahedron color="#DDCA7D" radius="5" position="-1.449 1.485 -5.636" scale="0.286 1.768 0.286" material="src:#btn" rotation="0 -123.07133439410083 0"></a-octahedron>
+                          <a-tetrahedron color="#DDCA7D" radius="5" position="3.345 1.714 -3.251" scale="0.319 0.319 0.319" material="src:#btn"></a-tetrahedron>
                           <a-box position="-2.851 1.303 -4.429" color="#DDCA7D" material="src:#btn"></a-box>
                    </a-entity>
         <!--ground/sky-->
