--- a/world00/index.html
+++ b/world00/index.html
@@ -47,11 +47,16 @@
                    <a-entity id="temple">
                         <a-box position="-0.429 1.303 -1.384" color="#DDCA7D" material="src:#btn"></a-box>
                                             <a-box position="1.831 1.303 -0.101" color="#DDCA7D" material="src:#btn"></a-box>
-                                                 <a-box position="1.016 0.361 -3.774" color="#DDCA7D" material="src:#btn" scale="3.245 0.079 1.36" n-box-collider="type:environment"></a-box>
+                                                 <a-box position="-49.357 15.509 -230.64" color="#DDCA7D" material="src:#btn" scale="154.467 0.079 19.807" n-box-collider="type:environment" id="overhang"></a-box><a-box position="127.104 15.509 -230.64" color="#DDCA7D" material="src:#btn" scale="154.467 0.079 19.807" n-box-collider="type:environment" id="overhang-2"></a-box>
 
                                                  
-                                                    <a-box n-box-collider="type:environment" position="39.088 9.273 -449.621" color="#DDCA7D" material="src:#btn" scale="330.335 17.895 418.519" geometry="" id="base"></a-box>
-                                                    <a-entity id="ramp" position="0 -34.942 -3.737" rotation="8.365183808910018 0 0">    
+                                                    <a-box n-box-collider="type:environment" position="39.088 9.273 -449.621" color="#DDCA7D" material="src:#btn" scale="330.335 17.895 418.519" id="base"></a-box>
+                                                    <a-entity id="ramp" position="0 -35.002 -3.737" rotation="8.365183808910018 0 0">    
+                                                            <a-cylinder position="27.066 20.11 -174.656" radius="0.5" height="1.5" color="#DDCA7D" material="src:#btn" id="rail" rotation="-90.01166961505233 0 0" scale="1.685 90.924 1.685"></a-cylinder><a-cylinder position="50.349 20.11 -174.656" radius="0.5" height="1.5" color="#DDCA7D" material="src:#btn" id="rail-2" rotation="-90.01166961505233 0 0" scale="1.685 90.924 1.685"></a-cylinder>                                  
+                                                            <a-box n-box-collider="type:environment" position="39.088 9.273 -176.723" color="#DDCA7D" material="src:#btn" scale="23.103 17.895 131.958" id="r"></a-box>
+                                                            <a-box n-box-collider="type:environment" position="50.473 10.103 -176.723" color="#DDCA7D" material="src:#btn" scale="1.864 19.599 131.958" id="r-2"></a-box>
+                                                            <a-box n-box-collider="type:environment" position="27.047 10.103 -176.723" color="#DDCA7D" material="src:#btn" scale="1.864 19.599 131.958" id="r-3"></a-box>
+                                                        </a-entity><a-entity id="ramp-2" position="0 -17.789 -256.859" rotation="8.365183808910018 0 0">    
                                                             <a-cylinder position="27.066 20.11 -174.656" radius="0.5" height="1.5" color="#DDCA7D" material="src:#btn" id="rail" rotation="-90.01166961505233 0 0" scale="1.685 90.924 1.685"></a-cylinder><a-cylinder position="50.349 20.11 -174.656" radius="0.5" height="1.5" color="#DDCA7D" material="src:#btn" id="rail-2" rotation="-90.01166961505233 0 0" scale="1.685 90.924 1.685"></a-cylinder>                                  
                                                             <a-box n-box-collider="type:environment" position="39.088 9.273 -176.723" color="#DDCA7D" material="src:#btn" scale="23.103 17.895 131.958" id="r"></a-box>
                                                             <a-box n-box-collider="type:environment" position="50.473 10.103 -176.723" color="#DDCA7D" material="src:#btn" scale="1.864 19.599 131.958" id="r-2"></a-box>
