--- a/world01/index.html
+++ b/world01/index.html
@@ -7,18 +7,11 @@
         <a-assets>
             <img id="btn" src="btn1.png">
         </a-assets>
-
 <!--
-          <a-entity position="0 223.153 0" scale="50 416.385 50" geometry="" id="temp" material="wireframe:true;color:#000000;"></a-entity>
-
-
-
-
-
-        -->
-
+        <a-entity position="-90.07 223.153 115.015" scale="50 416.385 50" geometry="" id="temp" material="color:#000000;wireframe:true"></a-entity>
+-->
        <!--begin model layer 1  position="-340.3 0 0" -->
-       <a-entity id="model" position="-340.3 0 0">
+       <a-entity id="model" position="-252.194 0 -25.677">
             <a-box id="L1" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 9.833 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box><a-box id="L1-2" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 425.987 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box><a-box id="L1-3" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 336.674 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box><a-box id="L1-4" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 261.512 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box><a-box id="L1-5" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 192.282 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box><a-box id="L1-6" color="#EDD4B2" src="#btn" material="repeat:10 10" position="366.551 83.64 -12.159" scale="10 10 10" n-box-collider="type:environment"></a-box>
             <a-box id="L1-1" color="#EDD4B2" src="#btn" material="repeat:20 20" position="331.765 24.719 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-7" color="#EDD4B2" src="#btn" material="repeat:20 20" position="331.765 286.781 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-8" color="#EDD4B2" src="#btn" material="repeat:20 20" position="331.765 370.367 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-9" color="#EDD4B2" src="#btn" material="repeat:20 20" position="331.765 134.4 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-10" color="#EDD4B2" src="#btn" material="repeat:20 20" position="331.765 421.059 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-11" color="#EDD4B2" src="#btn" material="repeat:20 20" position="361.684 421.059 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-12" color="#EDD4B2" src="#btn" material="repeat:20 20" position="361.684 341.224 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-13" color="#EDD4B2" src="#btn" material="repeat:20 20" position="361.684 226.028 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box><a-box id="L1-14" color="#EDD4B2" src="#btn" material="repeat:20 20" position="361.684 123.369 22.281" scale="20 20 20" n-box-collider="type:environment"></a-box>
         
