--- a/world01/index.html
+++ b/world01/index.html
@@ -28,7 +28,7 @@
 
         <!--ground/sky-->
 
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4000" height="4000" color="#C78461"></a-plane>    
+        <a-plane position="0 0 -4" rotation="-90 0 0" width="4000" height="4000" color="#C78461" src="#btn" material="repeat:4000 4000" altspace-cursor-collider="enabled: false"></a-plane>    
     </a-scene>
 <!--
 https://coolors.co/fcecc9-daa89b-c78461-ffcab1-edd4b2
