--- a/world02/index.html
+++ b/world02/index.html
@@ -17,7 +17,7 @@
     </a-assets>
 
     <!-- add the moon to the scene -->
-    <a-sphere position="11.796 -46.357 -2.94" material="src:#moon" rotation="300 0 0" id="moon" scale="41.957 41.957 41.957">
+    <a-sphere position="11.796 -180.712 -2.94" material="src:#moon;" rotation="299.525 0.57 0" id="moon" scale="177.605 177.605 177.605">
         <!-- add an animation to make it rotate -->
         <a-animation to="0 360 0" easing="linear" dur="2000000" repeat="indefinite">
     </a-animation></a-sphere>
