--- a/world02/index.html
+++ b/world02/index.html
@@ -16,10 +16,9 @@
         <img id='hull' src='hull.jpg'/>      
     </a-assets>
 
-    <!-- add the moon to the scene -->
-    <a-sphere position="11.796 -180.712 -2.94" material="src:#moon;" rotation="299.525 0.57 0" id="moon" scale="177.605 177.605 177.605">
+    <a-sphere position="11.796 -180.712 -2.94" material="src:#moon;" rotation="279.255 24.894 0" id="moon" scale="71.823 71.823 71.823">
         <!-- add an animation to make it rotate -->
-        <a-animation to="0 360 0" easing="linear" dur="2000000" repeat="indefinite">
+        <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite">
     </a-animation></a-sphere>
 
     <!-- add the backdrop of stars -->
