--- a/world02/index.html
+++ b/world02/index.html
@@ -31,7 +31,7 @@
 
         <!--begin station sub structure-->
         <a-entity id="sub_structure"> 
-
+                <a-sphere material="repeat:4 4;src:#grate;transparent:true;side:double;" id="dome" scale="20.354 20.354 20.354"></a-sphere>
                 <a-cylinder id="grey_pole" radius="0.5" height="1.5" material="color:#474747;src:#btn" position="0 -13.882 0" scale="1 18.448 1" geometry=""></a-cylinder>
                 <a-cylinder id="yellow_pole" radius="0.5" height="1.5" material="color:#F2AF29;src:#btn" position="8.887 -13.882 0" scale="1 18.448 1"></a-cylinder>
                 <a-cylinder id="bone_pole" radius="0.5" height="1.5" material="color:#E0E0CE;src:#btn" position="-9.539 -13.882 0" scale="1 18.448 1"></a-cylinder>
