--- a/world02/index.html
+++ b/world02/index.html
@@ -23,7 +23,10 @@
     </a-animation></a-sphere>
 
     <!-- add the backdrop of stars -->
-    <a-sky src='#stars' radius='2500'></a-sky>
+    <a-sky src='#stars' radius='2500'>
+
+            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite">
+    </a-sky>
 
         <!--ground/sky-->
         <a-entity position="1 1 1" camera="active:true;userHeight:1.6" wasd-controls="easing:20.01;fly:true;acceleration:165" rotation="-38.80136368210983 -1208.0242228532563 0" look-controls="" aframe-injected="" data-aframe-inspector-original-camera="" data-aframe-inspector="default-camera"></a-entity>
