--- a/world02/index.html
+++ b/world02/index.html
@@ -28,7 +28,7 @@
     <!-- add the backdrop of stars -->
     <a-sky src='#stars' radius='2500' id="the_sky" position="" rotation="" scale="">
 
-            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite" begin="right" end="right_stop" id="star_anim">
+            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite" delay="200000" id="star_anim">
     </a-sky>
 
         <!--ground/sky-->
