--- a/world02/index.html
+++ b/world02/index.html
@@ -30,7 +30,8 @@
     <!-- add the backdrop of stars -->
     <a-sky src='#stars' radius='2500' id="the_sky" position="" rotation="" scale="">
 
-            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="1" delay="200000" id="star_anim">
+            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="1"  id="star_anim">
+                    <a-animation to="0 360 0" easing="linear" dur="200000" repeat="1" delay="205000" id="star_anim2">
     </a-sky>
 
         <!--ground/sky-->
