--- a/world02/index.html
+++ b/world02/index.html
@@ -19,19 +19,28 @@
     </a-assets>
 
     <a-sphere position="-296.251 -70.501 -164.22" material="src:#trovia;" rotation="274.614 30.464 0" id="moon" scale="1.001 1.001 1.001">
+   
         <!-- add an animation to make it rotate -->
         <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite">
     </a-animation>
-    <a-animation attribute="scale" from="1 1 1" to="251.823 251.823 251.823" dur="200000"></a-animation>
+    <a-animation attribute="scale"  to="251.823 251.823 251.823" dur="200000"></a-animation>
     <a-animation attribute="scale" from="251.823 251.823 251.823" to=".1 .1 .1" dur="200000" delay="205000"></a-animation>
     <a-animation attribute="position" from="" to="297.541 70.501 -636.042" dur="200000" delay="205000"></a-animation>
-</a-sphere>
 
+</a-sphere>
+<a-sphere position="-296.251 -70.501 -164.22" material="emissive:#FF0000;opacity:.3;" rotation="274.614 30.464 0" id="moon2" scale="2.201 2.201 2.201">
+          <!-- add an animation to make it rotate -->
+          <a-animation to="0 360 0" easing="linear" dur="200000" repeat="indefinite">
+            </a-animation>
+            <a-animation attribute="scale"  to="261.823 261.823 261.823" dur="200000"></a-animation>
+            <a-animation attribute="scale" from="261.823 261.823 261.823" to=".1 .1 .1" dur="200000" delay="205000"></a-animation>
+            <a-animation attribute="position" from="" to="297.541 70.501 -636.042" dur="200000" delay="205000"></a-animation>
+    </a-sphere>
     <!-- add the backdrop of stars -->
     <a-sky src='#stars' radius='2500' id="the_sky" position="" rotation="" scale="">
 
-            <a-animation to="0 360 0" easing="linear" dur="200000" repeat="1"  id="star_anim">
-                    <a-animation to="0 360 0" easing="linear" dur="200000" repeat="1" delay="205000" id="star_anim2">
+            <a-animation to="0 360 0" easing="linear" dur="250000" repeat="indefinite"  id="star_anim">
+                   
     </a-sky>
 
         <!--ground/sky-->
